solve wiggling problem
when scrollbar apears, width of three js cause problem and wiggling, and solved the problem.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,9 @@ div{
     height: 10%;
     background:linear-gradient(black, transparent);
   }
+  #threeJS canvas{
+    height:100%;
+  }
   #topMenu{
     display: flex;
     width:100%;
